# blockhouse-arbitrage

./: .gitignore  FULL_DEMO.py  IMPROVEMENTS.md  README.md  TASK2_SUMMARY.md  TASK3_SUMMARY.md  TASK4_SUMMARY.md  cli.py  demo.py  performance_test.py  pyproject.toml  quick_performance_test.py  requirements-minimal.txt  requirements.txt  task3_demo.py  task4_demo.py  task5_demo.py
data/: orderbook_snapshots_20250803_181741.jsonl  orderbook_snapshots_20250803_182539.jsonl  orderbook_snapshots_20250803_182956.jsonl
data/s3_mock/: orderbook_snapshots_20250803_144629.jsonl  orderbook_snapshots_20250803_145219.jsonl  orderbook_snapshots_20250803_175813.jsonl  orderbook_snapshots_20250803_180030.jsonl  orderbook_snapshots_20250803_181825.parquet  orderbook_snapshots_20250803_182837.parquet  orderbook_snapshots_20250803_183124.parquet  orderbook_snapshots_20250803_183213.parquet  orderbook_snapshots_20250803_183318.parquet  orderbook_snapshots_20250803_183418.parquet  orderbook_snapshots_20250803_183429.parquet  orderbook_snapshots_20250803_184502.parquet  orderbook_snapshots_20250803_184513.parquet  orderbook_snapshots_20250803_185221.parquet  orderbook_snapshots_20250803_190231.parquet
src/xetrade/: models.py
src/xetrade/exchanges/: __init__.py  base.py  binance.py  bitmart.py  derive.py  kucoin.py  mock.py  okx.py
src/xetrade/services/: aggregator.py  funding.py  historical_data.py  position_monitor.py  price_impact.py  (+1 more)
task1_details/: task1_demo.py
task2_details/: task2_demo.py
task4_details/: task4_demo.py
task5_details/: TASK5_SUMMARY.md  task5_demo.py
(+2 files in other folders)
